src/objects/PersistentData__c.object
<CustomObject>
    <fields>
        <fullName>ChainStep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChainStep</label>
        <referenceTo>ChainStep__c</referenceTo>
        <relationshipLabel>Persistent Datas</relationshipLabel>
        <relationshipName>PersistentDatas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chain</label>
        <referenceTo>Chain__c</referenceTo>
        <relationshipLabel>Persistent Datas</relationshipLabel>
        <relationshipName>PersistentDatas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <label>Notification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Persistent Datas</relationshipLabel>
        <relationshipName>PersistentDatas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Buffer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reprocess</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Persistent Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>N-{0000000000}</displayFormat>
        <label>Persistent Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persistent Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>